# CMAN

./: .gitignore  README.md  README.zh-cn.md  main.py  poetry.toml  pyproject.toml
.github/workflows/: test.yaml
configs/: __init__.py
docs/standard/: meta.cman.md
game/: __init__.py
metadata/: __init__.py
modules/: mod.py
test/: test_config.py  test_game.py
tests/: __init__.py  test_config.py  test_metadata.py  test_modules.py
utils/: __init__.py
