[tool.poetry]
name = "cman"
version = "0.0.1"
description = "The Comprehensive Minecraft Archive Network"
authors = ["XYCode <xycode-xyc@outlook.com>"]
license = "LGPL v2.1"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
gitpython = "^3.1.41"
python-dotenv = "^1.0.1"
orjson = "^3.9.13"
rich = "^13.7.0"
aiohttp = "^3.9.3"
objprint = "^0.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
